overflow fix

--- a/css/style_web.css
+++ b/css/style_web.css
@@ -71,6 +71,7 @@
 /* Page */
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 a {
@@ -96,6 +97,8 @@ p {
 
 .page {
 	--back-color-1: rgba(0, 2, 53, 1);
+	position: relative;
+	width: 100%;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -494,6 +497,17 @@ a.avatar:hover {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-top: 67px;
+}
+
+.practice__images::before {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(0deg, #AAD9D9, #9090DC 84.42%, #7D7DDC);
+	border-radius: 83px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -615,6 +629,14 @@ a.avatar:hover {
 
 .card__image_places {
 	height: 100%;
+}
+
+.card__image_innop {
+	background-color: #123452;
+}
+
+.card__image_sd {
+	background-color: #3052d8;
 }
 
 /* Footer */
